Minor fix the checkboxes alignment

--- a/client/app/controllers/formshow/formshow.less
+++ b/client/app/controllers/formshow/formshow.less
@@ -201,6 +201,7 @@
 @tip-border-color: #967ADC;
 
 .inputLabel {
+  overflow: hidden;
   .popover.right {
     margin-left: 17px;
     margin-top: 5px;
